# mesh_vo

./: .gitignore  .gitmodules  CMakeLists.txt
.devcontainer/: Dockerfile  Dockerfile_ROS2  devcontainer.json  upload_to_github_registry.sh
.github/workflows/: cmake-single-platform.yml
include/glad/: glad.h
include/learnopengl/: camera.h  compute.h  feedback_shader.h  shader_m.h
paper/: elsarticle-template.tex
src/: HJPose.cpp  HJPose.h  data.cpp  data.h  frame.cpp  frame.h  glad.c  gmon.out  mesh_vo.cpp  mesh_vo.h  params.cpp  params.h  visualOdometry.cpp  visualOdometry.h  visualOdometryThreaded.h
src/Utils/: tictoc.cpp  tictoc.h
src/apps/kitti_binocular/: main_on_images.cpp
src/apps/rgbd_dataset/: main_on_images.cpp
src/apps/syfra/: main_on_images.cpp
src/apps/test/: main.cpp
src/apps/test/utils/: convertAhandaPovRayToStandard.cpp  convertAhandaPovRayToStandard.h
src/apps/tum_dataset/: Undistorter.cpp  main_on_images.cpp
src/common/: DelaunayTriangulation.cpp  DelaunayTriangulation.h  DenseLinearProblem.h  DenseSparseLinearProblem.h  Error.h  HGEigen.h  HGEigenDense.h  HGEigenDenseSparse.h  HGEigenSparse.h  HGMap.h  HGMapped.h  HGPose.h  HGPoseMap.h  HGPoseMapMesh.h  Mesh.h  SparseLinearProblem.h  Triangle.h  Vertex.h  Vertice.h  camera.h  common.cpp  common.h  comparison.h  depthParam.h  error.h  frame.h  keyframe.h  ldlt_solver.h  lingalglib.h  reducer.h  triangle.h  types.h  types2.h  window.h
src/cpu/: GeometryBase.h  GeometryMesh.h  GeometryVertices.h  HGPose_cpu.h  IndexThreadReduce.h  Mesh.h  MeshCPU.cpp  MeshCPU.h  MeshNormalsCPU.h  MeshSmooth.h  MeshTexCoordsCPU.h  OpenCVDebug.h  PointSet.h  PointSetCPU.h  PointSetNormals.h  PointSetRayIdepth.h  Polygon.h  RenderableObject.h  SceneBase.h  SceneMesh.h  SceneMeshSmooth.h  ScenePatches.h  SceneSurfels.h  SceneVertices.h  SceneVerticesBase.h  SceneVerticesNormals.h  SceneVerticesNormalsBase.h  Shapes.h  SurfelSet.h  SurfelSetCPU.h  Triangle2D.h  Triangle3D.h  TriangleCPU.h  VerticeCPU.h  camera_cpu.h  compute_cpu.h  dataCPU.h  dataCPUCV.h  dataCPU__.h  data_cpu.cpp  (+12 more)
src/devices/cpu/: GeometryMesh.h  IndexThreadReduce.h  SceneSurfels.h  SceneVertices.h  renderCPU.h
src/devices/opengl/: GeometryMeshGPU.h  GeometryVerticesGPU.h  compute_gpu.h  dataGPU.h  data_gpu.cpp  frame_gpu.h  keyFrameGPU.h  rendererGPU.h
src/devices/opengl/shaders/: JMap.gs  JMap.vs  JPoseMap.gs  JPose_v2.fs  error.cs  errorVertex.fs  errorVertex.vs  frameDerivative.fs  frameDerivative.vs  occupancy.vs  reduceRGBATexture.cs
src/kitti/: main_on_images.cpp
src/kitti_binocular/: main_on_images.cpp
src/opengl/: camera_gpu.h  compute_gpu.cpp  compute_gpu.h  data_gpu.h  frame_gpu.cpp  params_gpu.h
src/opengl/shaders/: JPose.vs  JPoseMap.fs  error.fs  reduceHJPose.cs  reduceRTexture.cs
src/optimizers/: baseOptimizer.cpp  baseOptimizer.h  baseOptimizerCPU.cpp  baseOptimizerCPU.h  intrinsicPoseMapOptimizer.cpp  intrinsicPoseMapOptimizer.h  intrinsicPoseMapOptimizerCPU.cpp  intrinsicPoseMapOptimizerCPU.h  keyframeIdepthSceneCPU.cpp  mapOptimizer.cpp  mapOptimizer.h  mapOptimizerCPU.cpp  mapOptimizerCPU.h  meshOptimizerCPU.cpp  meshOptimizerCPU.h  poseMapOptimizer.cpp  poseMapOptimizerCPU.cpp  poseMapOptimizerCPU.h  poseOptimizer.cpp  poseOptimizer.h  poseOptimizerCPU.cpp  poseOptimizerCPU.h  poseVelOptimizer.h  poseVelOptimizerCPU.cpp  poseVelOptimizerCPU.h  sceneOptimizerCPU.cpp  sceneOptimizerCPU.h
src/scene/: keyframeIdepthSceneCPU.cpp  keyframeIdepthSceneCPU.h  mesh.h  meshScene.h  pointMeshScene.cpp  pointMeshScene.h  rayDepthMeshScene.cpp  rayDepthMeshScene.h  rayDepthMeshSceneCPU.cpp  rayDepthMeshSceneCPU.h  sceneCPU.cpp  sceneCPU.h  scene_mesh.cpp  scene_mesh.h  surfelSceneCPU.cpp  surfelSceneCPU.h
src/shaders/: HJPose.fs  HJPose2.fs  JMap.fs  JMap.gs  JMap.vs  JPose.cs  JPose.fs  JPoseMap.fs  JPoseMap.vs  calcHJ.fs  calcHJ.gs  calcHJ.vs  calcHJ2.fs  calcHJ2.vs  calcHJMap.fs  calcHJMap.gs  calcHJMap.vs  copy.fs  debug.fs  debug.gs  debug.vs  drawDepth.fs  drawDepth.gs  error.cs  error.fs  error.gs  error.vs  errorVertex.gs  frameDerivative.fs  frameDerivative.vs  idepth.fs  idepth.vs  isVertexInView.fs  isVertexInView.gs  isVertexInView.vs  occupancy.fs  reduceError.cs  reduceFloat.fs  reduceHJPose.cs  reduceHJPoseV2.cs  (+7 more)
src/test/: main.cpp
src/test/utils/: convertAhandaPovRayToStandard.cpp  convertAhandaPovRayToStandard.h
src/tum_dataset/: main_on_images.cpp
src/visualizer/: geometryPlotter.h  imagePlotter.h  trayectoryPlotter.h  visualizer.h
tests/: common.h  convertAhandaPovRayToStandard.cpp  convertAhandaPovRayToStandard.h  initDepth_test.cpp  mapEstimation_test.cpp  poseEstimation_test.cpp  poseVelEstimation_test.cpp  rendererCPU_test.cpp  rendererGPU_test.cpp  visualOdometry_test.cpp
